# tildebin

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  QWEN.md  README.md  acrosshosts.sh  baremetal_arp_table_monitor.py  baremetal_auditd_health_monitor.py  baremetal_authorized_keys_audit.py  baremetal_bandwidth_monitor.py  baremetal_block_error_monitor.py  baremetal_boot_issues_analyzer.py  baremetal_ceph_health_monitor.py  baremetal_cgroup_cpu_limits_monitor.py  baremetal_clocksource_monitor.py  baremetal_conntrack_monitor.py  baremetal_container_runtime_health.py  baremetal_coredump_monitor.py  baremetal_cpu_steal_monitor.py  baremetal_cpu_vulnerability_scanner.py  baremetal_crash_dump_monitor.py  baremetal_defunct_parent_analyzer.py  baremetal_disk_life_predictor.py  baremetal_disk_sector_health.py  baremetal_disk_write_cache_audit.py  baremetal_dmesg_analyzer.py  baremetal_efi_boot_audit.py  baremetal_ephemeral_port_monitor.py  baremetal_etcd_health_monitor.py  baremetal_ethtool_audit.py  baremetal_fd_leak_detector.py  baremetal_file_integrity_monitor.py  baremetal_firmware_inventory.py  baremetal_hugepage_monitor.py  baremetal_hwclock_drift_monitor.py  baremetal_initramfs_health_monitor.py  baremetal_inode_usage_monitor.py  baremetal_inotify_exhaustion_monitor.py  (+121 more)
.beads/: issues.jsonl
boxctl/: __init__.py  cli.py  pyproject.toml
docs/: architecture.md  cli-reference.md  writing-scripts.md
legacy/: AGENTS.md  acrosshosts.sh  baremetal_active_sessions_monitor.py  baremetal_binfmt_misc_audit.py  baremetal_bond_health_monitor.py  baremetal_cron_job_monitor.py  (+176 more)
(+1763 files in other folders)
