[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boxctl"
version = "0.1.0"
description = "Unified CLI for baremetal and Kubernetes utility scripts"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
boxctl = "boxctl.cli:main"

[tool.setuptools.packages.find]
include = ["boxctl*", "scripts*"]
exclude = ["skills*", "legacy*", "tests*", "docs*"]

[tool.coverage.run]
source = ["boxctl"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"
markers = [
    "integration: marks tests as integration tests",
]
